--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -22,9 +22,11 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: wrapper
 
       - name: Build with Gradle
-        run: ./gradlew buildFatJar
+        run: ./gradle buildFatJar
 
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
