--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -26,7 +26,7 @@ jobs:
           gradle-version: wrapper
 
       - name: Build with Gradle
-        run: ./gradle buildFatJar
+        run: gradle buildFatJar
 
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
